# kaleidoscope

./: .gitignore  CMakeLists.txt  GUI.cpp  GUI.h  GUIMyDialog1.cpp  GUIMyDialog1.h  GUIMyFrame1.cpp  GUIMyFrame1.h  Kaleidoscope.cpp  Kaleidoscope.h  README.md  SeriesWorkerThread.cpp  SeriesWorkerThread.h  gui.fbp  init.sh  main.cpp
doc/html en/: GUIMyDialog1_8h.html  GUIMyDialog1_8h__dep__incl.dot  GUIMyDialog1_8h__incl.dot  GUIMyDialog1_8h_source.html  GUIMyFrame1_8h.html  GUIMyFrame1_8h__incl.dot  GUIMyFrame1_8h_source.html  GUI_8h_source.html  Kaleidoscope_8h_source.html  SeriesWorkerThread_8h_source.html  annotated.html  classAxisIterator_1_1iterator-members.html  classGUIMyDialog1.html  classGUIMyDialog1__coll__graph.dot  classGUIMyDialog1__inherit__graph.dot  classGUIMyFrame1-members.html  classGUIMyFrame1.html  classGUIMyFrame1__coll__graph.dot  classLoadingDialog-members.html  classLoadingDialog.html  classLoadingDialog__inherit__graph.dot  classMyApp.html  classMyDialog1-members.html  classMyDialog1.html  classMyDialog1__inherit__graph.dot  classMyFrame1-members.html  classMyFrame1.html  classMyFrame1__coll__graph.dot  classMyFrame1__inherit__graph.dot  classSeriesWorkerThread.html  classSeriesWorkerThread__coll__graph.dot  classes.html  files.html  functions.html  functions_func.html  functions_vars.html  hierarchy.html  inherit_graph_2.dot  inherit_graph_3.dot  inherit_graph_4.dot  (+8 more)
doc/html pl/: GUIMyDialog1_8h.html  GUIMyDialog1_8h__dep__incl.dot  GUIMyDialog1_8h__incl.dot  GUIMyDialog1_8h_source.html  GUIMyFrame1_8h.html  GUIMyFrame1_8h__incl.dot  files.html  (+47 more)
(+76 files in other folders)
